--- a/index.html
+++ b/index.html
@@ -8,7 +8,7 @@
     <link rel="stylesheet" href="./css/styles.css">
 </head>
 
-<body>
+<body class="body">
     <header>
         <nav class="navbar">
             <ul class="navbar__menuPrincipal">
